# recipebox-v1

./: pyproject.toml
recipe_app/: admin.py  forms.py  models.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_auto_20210308_2332.py  0003_author_favorite.py  0004_auto_20210309_1536.py
recipebox/: settings.py  urls.py
templates/: AddRecipeForm.html  GenericForm.html  add_author.html  add_recipe.html  author_detail.html  generic_form.html  index.html  recipe_detail.html
